# cookiecutter-prefect-mlflow-bentoml

./: LICENSE  README.md
{{ cookiecutter.repo_name }}/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
{{ cookiecutter.repo_name }}/bento/: save_model.py
{{ cookiecutter.repo_name }}/bento/service/: bentofile.yaml  service.py
{{ cookiecutter.repo_name }}/conf/: hydra.yaml  main.yaml
{{ cookiecutter.repo_name }}/conf/deployment/: prod.yaml  staging.yaml
{{ cookiecutter.repo_name }}/experiment_flow/: flow.py  tasks.py
{{ cookiecutter.repo_name }}/experiment_flow/chart/: data.py  metrics.py
{{ cookiecutter.repo_name }}/experiment_flow/utils/: log.py
